# ksops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
ksops/: __init__.py  __main__.py  cli.py  exceptions.py  files.py  sops.py
tests/: test_cli.py
