[project]
name = "ksops"
version = "0.2.0"
description = "A SOPS companion CLI for editing, validating, and rekeying Kubernetes secrets"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bruno Bernard", email = "contact.brunobernard@gmail.com" },
]
license = { text = "MIT" }
keywords = ["kubernetes", "sops", "secrets", "gitops", "cli"]
dependencies = [
    "click>=8.0",
    "ruamel-yaml>=0.18",
]

[project.scripts]
ksops = "ksops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ksops"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ksops"]
branch = true
omit = ["ksops/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
